<resources>
    <string name="app_name">Tech Repair</string>
    <string name="spinner_title">Select Category</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="action_add_favourite">Browse Parts</string>
    <string name="action_play_next">Repair Now</string>
    <string name="backdrop_title">LOVE GADGETS</string>
    <string name="backdrop_subtitle">Services you can trust. Quality you can afford.</string>
    <string name="title_activity_desktop_parts">DesktopParts</string>
    <string name="section_format">Work in Progress</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_maps">Map</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="facebook_app_id">292667174492713</string>
    <string-array name="radius">
        <item>1000</item>
        <item>5000</item>
        <item>10000</item>
        <item>20000</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="apple_monitor1">Apple iMac 27 Inch Retina 5K Display with 3.2GHz Quad-Core MK462HN-A</string>
    <string name="apple_CPU1">Apple A5</string>
    <string name="apple_CPU1.5">Apple A5X</string>
    <string name="apple_CPU2">Apple A6</string>
    <string name="apple_CPU3">Apple A9</string>
    <string name="apple_power1">Apple iMac 21.5" A1311 2009 2010 2011 Power Supply</string>
    <string name="apple_power2">POWER SUPPLY 310W - Apple iMac 27” A1312 Mid 2011 MC813 MC814 PA-2311-02A</string>
    <string name="apple_power3">NEW APPLE Imac A1418 21.5" 2013 2014 Power Supply 02-6712-6700 APA007</string>
    <string name="apple_power4">NEW POWER SUPPLY 300W - Apple iMac 27” A1419 2012 2013 Retina 5K 2014 2015</string>
</resources>
