<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Onefragment">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <Button
        android:id="@+id/expandableButton1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#ba1f04"
        android:drawableRight="@android:drawable/arrow_down_float"
        android:onClick="expandableButton1"
        android:paddingRight="10dp"
        android:text="KEYBOARD"
        android:textColor="#fff" />

    <com.github.aakira.expandablelayout.ExpandableRelativeLayout
        android:id="@+id/expandableLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/expandableButton1"
        android:background="#90ba1f04"
        android:padding="16dp"
        app:ael_duration="400"
        app:ael_expanded="false"
        app:ael_interpolator="bounce"
        app:ael_orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/f1t1"
            android:onClick="onf1t1Click"
            android:textStyle="bold"
            android:text="Apple Keyboard with Numeric keypad - US MB110LL-B" />
        <TextView
            android:layout_width="match_parent"
            android:layout_below="@+id/f1t1"
            android:id="@+id/f1t2"
            android:onClick="onf1t2Click"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="Bluetooth 3.0 Wireless Keyboard Apple Computer PC Macbook 837"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_below="@+id/f1t2"
            android:id="@+id/f1t3"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="Magic Keyboard - US Magic Keyboard"/>

        <android.support.v7.widget.RecyclerView
            android:layout_below="@+id/f1t3"
            android:id="@+id/recycleviewot"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </com.github.aakira.expandablelayout.ExpandableRelativeLayout>


    <Button
        android:id="@+id/expandableButton2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/expandableLayout1"
        android:background="#b77803"
        android:drawableRight="@android:drawable/arrow_down_float"
        android:onClick="expandableButton2"
        android:paddingRight="10dp"
        android:text="MONITOR"
        android:textColor="#fff" />

    <com.github.aakira.expandablelayout.ExpandableRelativeLayout
        android:id="@+id/expandableLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/expandableButton2"
        android:background="#90b77803"
        android:padding="16dp"
        app:ael_duration="400"
        app:ael_expanded="false"
        app:ael_interpolator="bounce"
        app:ael_orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/f1t4"
            android:textStyle="bold"
            android:text="Apple iMac 21.5 Inch Display with 1.6GHz Dual-Core MK142HN-A" />

        <TextView
            android:layout_width="match_parent"
            android:layout_below="@+id/f1t4"
            android:id="@+id/f1t5"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/apple_monitor1"/>

        <android.support.v7.widget.RecyclerView
            android:layout_below="@+id/f1t5"
            android:id="@+id/recycleviewom"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </com.github.aakira.expandablelayout.ExpandableRelativeLayout>

    <Button
        android:id="@+id/expandableButton3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/expandableLayout2"
        android:background="#10a106"
        android:drawableRight="@android:drawable/arrow_down_float"
        android:onClick="expandableButton3"
        android:paddingRight="10dp"
        android:text="CPU"
        android:textColor="#fff" />

    <com.github.aakira.expandablelayout.ExpandableRelativeLayout
        android:id="@+id/expandableLayout3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/expandableButton3"
        android:background="#9010a106"
        android:padding="16dp"
        app:ael_duration="400"
        app:ael_expanded="false"
        app:ael_interpolator="bounce"
        app:ael_orientation="vertical">

        <TextView
        android:layout_width="match_parent"
        android:id="@+id/f1t6"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/apple_CPU1"/>

        <TextView
            android:layout_width="match_parent"
            android:id="@+id/f1t7"
            android:layout_below="@+id/f1t6"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/apple_CPU1.5"/>

        <TextView
            android:layout_width="match_parent"
            android:id="@+id/f1t8"
            android:layout_below="@+id/f1t7"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/apple_CPU2"/>
        <TextView
            android:layout_width="match_parent"
            android:id="@+id/f1t9"
            android:layout_below="@+id/f1t8"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/apple_CPU3"/>
    </com.github.aakira.expandablelayout.ExpandableRelativeLayout>


    <Button
        android:id="@+id/expandableButton4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/expandableLayout3"
        android:background="#066da1"
        android:drawableRight="@android:drawable/arrow_down_float"
        android:onClick="expandableButton4"
        android:paddingRight="10dp"
        android:text="POWER SUPPLY"
        android:textColor="#fff" />

    <com.github.aakira.expandablelayout.ExpandableRelativeLayout
        android:id="@+id/expandableLayout4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/expandableButton4"
        android:background="#90066da1"
        android:padding="16dp"
        app:ael_duration="400"
        app:ael_expanded="false"
        app:ael_interpolator="bounce"
        app:ael_orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:id="@+id/f1t10"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/apple_power1"/>

        <TextView
            android:layout_width="match_parent"
            android:id="@+id/f1t11"
            android:layout_below="@+id/f1t10"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/apple_power2"/>

        <TextView
            android:layout_width="match_parent"
            android:id="@+id/f1t12"
            android:layout_below="@+id/f1t11"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/apple_power3"/>
        <TextView
            android:layout_width="match_parent"
            android:id="@+id/f1t13"
            android:layout_below="@+id/f1t12"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/apple_power4"/>
    </com.github.aakira.expandablelayout.ExpandableRelativeLayout>
</RelativeLayout>
</android.support.v4.widget.NestedScrollView>